# koda-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
assets/: demo.cast  make-demo.py  record-demo.sh
extras/nvim/: README.md
extras/nvim/lua/koda/: init.lua
src/koda/: cli_utils.py  config.py  constants.py  db.py  git_sync.py  main.py  models.py  runtime.py
src/koda/cmd_helpers/: __init__.py  display.py  interactive.py  metadata.py  parsing.py
src/koda/commands/: config.py  exec.py  git.py  index.py  memo.py
tests/: conftest.py  test_add.py  test_add_input.py  test_cli_utils.py  test_config.py  test_config_get_mask.py  test_db.py  test_diff_backup.py  test_display_modes.py  test_dry_run.py  test_editor.py  test_exec.py  test_exec_group.py  test_exit_codes.py  test_export_import.py  test_git_sync.py  test_index.py  test_json_output.py  test_lazy_init.py  test_list_dispatch.py  test_merger.py  test_migrations.py  test_models.py  test_parsing.py  test_permissions.py  test_pick_multi.py  test_quiet_print.py  test_raw.py  test_source.py  test_tag.py  test_title.py  test_title_cli.py  test_uid.py  test_ux.py
