[project]
name = "koda-cli"
version = "1.2.0"
description = "A fast CLI memo store and command launcher backed by SQLite or Turso."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ngt22" }
]
keywords = ["koda", "memo", "snippet", "cli", "productivity", "sqlite"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
turso = ["libsql-experimental>=0.0.1"]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/ngt22/koda-cli"
Repository = "https://github.com/ngt22/koda-cli.git"
Issues = "https://github.com/ngt22/koda-cli/issues"

[project.scripts]
koda = "koda.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/koda"]

[tool.hatch.build.targets.sdist]
include = ["src/koda"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=koda --cov-report=term-missing"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
